--- a/ExtractValueData/App.config
+++ b/ExtractValueData/App.config
@@ -2,6 +2,8 @@
 <configuration>
   <appSettings>
     <add key="Url" value="http://fund.eastmoney.com/f10/F10DataApi.aspx?type=lsjz"/>
+    <add key="queryUri" value="&amp;code={code}&amp;page={page}&amp;per={per}&amp;sdate={sdate}&amp;edate={edate}&amp;rt=0.24914203854989547"/>
+    <add key="GJCode" value="000977"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
