--- a/TopRankCodeList/App.config
+++ b/TopRankCodeList/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Url" value="http://fundapi.eastmoney.com/fundtradenew.aspx?ft=hh&amp;sc=3y&amp;st=desc&amp;pi=1&amp;pn=100&amp;cp=&amp;ct=&amp;cd=&amp;ms=&amp;fr=&amp;plevel=&amp;fst=&amp;ftype=&amp;fr1=&amp;fl=0&amp;isab="/>
+    <add key="Url" value="http://fundapi.eastmoney.com/fundtradenew.aspx?ft=hh&amp;sc=y&amp;st=desc&amp;pi=1&amp;pn=100&amp;cp=&amp;ct=&amp;cd=&amp;ms=&amp;fr=&amp;plevel=&amp;fst=&amp;ftype=&amp;fr1=&amp;fl=0&amp;isab="/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
