--- a/ExtractWeb/RealtimeData.csproj
+++ b/ExtractWeb/RealtimeData.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D30DFB11-537D-4EF4-856C-F2A9B13E30FA}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ExtractWeb</RootNamespace>
     <AssemblyName>ExtractWeb</AssemblyName>
