--- a/TopRankCodeList/App.config
+++ b/TopRankCodeList/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="Url" value="http://fundapi.eastmoney.com/fundtradenew.aspx?ft=hh&amp;sc=y&amp;st=desc&amp;pi=1&amp;pn=100&amp;cp=&amp;ct=&amp;cd=&amp;ms=&amp;fr=&amp;plevel=&amp;fst=&amp;ftype=&amp;fr1=&amp;fl=0&amp;isab="/>
-    <add key="MarkCode" value=""/><!--180031,000273,160211-->
+    <add key="MarkCode" value="160211"/><!--180031,000273,160211-->
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
