--- a/ExtractWeb/App.config
+++ b/ExtractWeb/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Url" value="http://fund.eastmoney.com/000945.html"/>
+    <add key="Url" value="http://fund.eastmoney.com/160211.html"/>
+    <add key="Level" value="2.95"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
