--- a/TopRankCodeList/App.config
+++ b/TopRankCodeList/App.config
@@ -2,9 +2,11 @@
 <configuration>
   <appSettings>
     <add key="Url" value="http://fundapi.eastmoney.com/fundtradenew.aspx?ft=hh&amp;sc=y&amp;st=desc&amp;pi=1&amp;pn=100&amp;cp=&amp;ct=&amp;cd=&amp;ms=&amp;fr=&amp;plevel=&amp;fst=&amp;ftype=&amp;fr1=&amp;fl=0&amp;isab="/>
+    <add key="CodeSource2" value="http://fund.eastmoney.com/data/rankhandler.aspx?op=ph&amp;dt=kf&amp;ft=hh&amp;rs=&amp;gs=0&amp;sc=1nzf&amp;st=asc&amp;sd=2016-10-11&amp;ed=2017-10-11&amp;qdii=&amp;tabSubtype=,,,,,&amp;pi=1&amp;pn=200&amp;dx=1&amp;v=0.29191299906222246"/>
     <add key="MarkCode" value=""/><!--180031,000273,160211-->
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <!--http://fund.eastmoney.com/data/diyfundranking.html#tall;c0;r;sqjzf;pn50;ddesc;qsd20161014;qed20171014;qdii-->
 </configuration>
