--- a/ExtractWeb/Task/1/ExtractWeb.exe.config
+++ b/ExtractWeb/Task/1/ExtractWeb.exe.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Url" value="http://fund.eastmoney.com/160211.html"/>
-    <add key="Level" value="2.95"/><!--mean2.95 buy3.0044-->
+    <add key="Url" value="http://fund.eastmoney.com/{code}.html"/>
+    <add key="Level" value="2.5539"/><!--mean2.47-->
+    <add key="Code" value="180031"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
