--- a/AnalystLib/AnalystLib.csproj
+++ b/AnalystLib/AnalystLib.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D30DFB11-537D-4EF4-856C-F2A9B13E30FA}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{AC952B5C-82BD-4D12-8D36-47B806F48FC7}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ExtractWeb</RootNamespace>
-    <AssemblyName>ExtractWeb</AssemblyName>
+    <RootNamespace>AnalystLib</RootNamespace>
+    <AssemblyName>AnalystLib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -31,15 +29,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HtmlAgilityPack">
-      <HintPath>..\..\..\..\..\Downloads\HtmlAgilityPack.1.4.6\HtmlAgilityPack.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,35 +40,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProcessWeb.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="..\ExtractValueData\ExtractDayData.cs">
+      <Link>ExtractDayData.cs</Link>
+    </Compile>
+    <Compile Include="GZHistory.cs" />
+    <Compile Include="GZStatistic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="Task\1\ExtractWeb.exe.config" />
-    <None Include="Task\1\ExtractWeb.vshost.exe.config" />
-    <None Include="Task\1\ExtractWeb.vshost.exe.manifest" />
-    <None Include="Task\2\ExtractWeb.exe.config" />
-    <None Include="Task\2\ExtractWeb.vshost.exe.config" />
-    <None Include="Task\2\ExtractWeb.vshost.exe.manifest" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Task\1\ExtractWeb.exe" />
-    <Content Include="Task\1\ExtractWeb.pdb" />
-    <Content Include="Task\1\ExtractWeb.vshost.exe" />
-    <Content Include="Task\1\HtmlAgilityPack.dll" />
-    <Content Include="Task\2\2017-10-12.txt" />
-    <Content Include="Task\2\2017-9-26.txt" />
-    <Content Include="Task\2\ExtractWeb.exe" />
-    <Content Include="Task\2\ExtractWeb.pdb" />
-    <Content Include="Task\2\ExtractWeb.vshost.exe" />
-    <Content Include="Task\2\HtmlAgilityPack.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AnalystLib\AnalystLib.csproj">
-      <Project>{ac952b5c-82bd-4d12-8d36-47b806f48fc7}</Project>
-      <Name>AnalystLib</Name>
+    <ProjectReference Include="..\DataStatistics\DataStatisticsLib.csproj">
+      <Project>{E7B51438-3D79-4E75-B7FA-9F95D0170F0E}</Project>
+      <Name>DataStatisticsLib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
