--- a/ExtractWeb/Task/1/ExtractWeb.vshost.exe.config
+++ b/ExtractWeb/Task/1/ExtractWeb.vshost.exe.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="Url" value="http://fund.eastmoney.com/{code}.html"/>
-    <add key="Level" value="2.5539"/><!--mean2.47-->
+    <add key="Level" value="2.5539"/>
     <add key="Code" value="180031"/>
   </appSettings>
     <startup> 
