--- a/ShowTrend/ShowTrend.csproj
+++ b/ShowTrend/ShowTrend.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D30DFB11-537D-4EF4-856C-F2A9B13E30FA}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{190CEC43-993C-4228-8FAD-8AE36494A808}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ExtractWeb</RootNamespace>
-    <AssemblyName>ExtractWeb</AssemblyName>
+    <RootNamespace>ShowTrend</RootNamespace>
+    <AssemblyName>ShowTrend</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,59 +31,56 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HtmlAgilityPack">
-      <HintPath>..\..\..\..\..\Downloads\HtmlAgilityPack.1.4.6\HtmlAgilityPack.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProcessWeb.cs" />
+    <Compile Include="..\ExtractValueData\ExtractDayData.cs">
+      <Link>ExtractDayData.cs</Link>
+    </Compile>
+    <Compile Include="Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
-    <None Include="Task\1\ExtractWeb.exe.config" />
-    <None Include="Task\1\ExtractWeb.vshost.exe.config" />
-    <None Include="Task\1\ExtractWeb.vshost.exe.manifest" />
-    <None Include="Task\2\ExtractWeb.exe.config" />
-    <None Include="Task\2\ExtractWeb.vshost.exe.config" />
-    <None Include="Task\2\ExtractWeb.vshost.exe.manifest" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Task\1\ExtractWeb.exe" />
-    <Content Include="Task\1\ExtractWeb.pdb" />
-    <Content Include="Task\1\ExtractWeb.vshost.exe" />
-    <Content Include="Task\1\HtmlAgilityPack.dll" />
-    <Content Include="Task\2\2017-10-12.txt" />
-    <Content Include="Task\2\2017-9-26.txt" />
-    <Content Include="Task\2\ExtractWeb.exe" />
-    <Content Include="Task\2\ExtractWeb.pdb" />
-    <Content Include="Task\2\ExtractWeb.vshost.exe" />
-    <Content Include="Task\2\HtmlAgilityPack.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AnalystLib\AnalystLib.csproj">
-      <Project>{ac952b5c-82bd-4d12-8d36-47b806f48fc7}</Project>
-      <Name>AnalystLib</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
