--- a/ExtractWeb/Task/2/ExtractWeb.vshost.exe.config
+++ b/ExtractWeb/Task/2/ExtractWeb.vshost.exe.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Url" value="http://fund.eastmoney.com/{code}.html"/>
+    <!--<add key="Url" value="http://fund.eastmoney.com/{code}.html"/>-->
+    <add key="Url" value="https://m.1234567.com.cn/index.html?page=jjxq&amp;code={code}"/>
     <add key="Level" value="2.5539"/>
     <add key="Code" value="180031"/>
   </appSettings>
